--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/bbdd_residuosnomas?createDatabaseIfNotExist=true
-##spring.datasource.username=root
-##spring.datasource.password=xxx
+spring.datasource.username=root
+spring.datasource.password=2808.Fran
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 ##server.port=8080
