--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/bbdd_residuosnomas?createDatabaseIfNotExist=true
-#spring.datasource.username=
-#spring.datasource.password=
+spring.datasource.username=root
+spring.datasource.password=13041994Rigoz
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 server.port=8080
